[gd_scene load_steps=11 format=3 uid="uid://dkctmuvn5t01o"]

[ext_resource type="Script" uid="uid://kitmttrlhacs" path="res://ui/status_panel.gd" id="1_0jk47"]
[ext_resource type="Texture2D" uid="uid://pp1hs7qu0arj" path="res://assets/legacy_fantasy/HUD.png" id="2_7nptj"]
[ext_resource type="Texture2D" uid="uid://b3wgjd6h5wp7i" path="res://assets/generic_char/char_blue_1.png" id="3_uqk2t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m3mpx"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
texture = ExtResource("2_7nptj")
region_rect = Rect2(323, 203, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1n06"]
atlas = ExtResource("3_uqk2t")
region = Rect2(22, 24, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl8nt"]
atlas = ExtResource("2_7nptj")
region = Rect2(307, 21, 58, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_21v3x"]
atlas = ExtResource("2_7nptj")
region = Rect2(308, 118, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jk47"]
atlas = ExtResource("2_7nptj")
region = Rect2(308, 86, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nptj"]
atlas = ExtResource("2_7nptj")
region = Rect2(307, 6, 58, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqk2t"]
atlas = ExtResource("2_7nptj")
region = Rect2(308, 39, 56, 2)

[node name="StatusPanel" type="HBoxContainer"]
script = ExtResource("1_0jk47")

[node name="AvatarBox" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m3mpx")

[node name="Avatar" type="TextureRect" parent="AvatarBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_q1n06")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.0
value = 0.8
texture_over = SubResource("AtlasTexture_kl8nt")
texture_progress = SubResource("AtlasTexture_21v3x")
texture_progress_offset = Vector2(1, 1)

[node name="EasedHealthBar" type="TextureProgressBar" parent="VBoxContainer/HealthBar"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.0
value = 1.0
texture_progress = SubResource("AtlasTexture_0jk47")
texture_progress_offset = Vector2(1, 1)

[node name="EnergyBar" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
texture_over = SubResource("AtlasTexture_7nptj")
texture_progress = SubResource("AtlasTexture_uqk2t")
texture_progress_offset = Vector2(1, 1)
